load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

# gazelle:prefix github.com/stripe/skycfg
# gazelle:build_file_name BUILD,BUILD.bazel
# gazelle:go_naming_convention import

# gazelle:exclude _examples

go_library(
    name = "skycfg",
    srcs = ["skycfg.go"],
    importpath = "github.com/stripe/skycfg",
    visibility = ["//visibility:public"],
    deps = [
        "//go/assertmodule",
        "//go/hashmodule",
        "//go/protomodule",
        "//go/urlmodule",
        "//go/yamlmodule",
        "@org_golang_google_protobuf//proto",
        "@net_starlark_go//starlark",
        "@net_starlark_go//starlarkjson",
        "@net_starlark_go//starlarkstruct",
        "@org_golang_google_protobuf//reflect/protoreflect",
        "@org_golang_google_protobuf//reflect/protoregistry",
    ],
)

go_test(
    name = "skycfg_test",
    size = "small",
    srcs = ["skycfg_test.go"],
    embed = [":skycfg"],
    deps = [
        "//internal/testdata/test_proto:test_proto_go_proto",
        "@org_golang_google_protobuf//proto",
        "@net_starlark_go//starlark",
        "@org_golang_google_protobuf//types/known/wrapperspb",
    ],
)